--- a/dahlia.css
+++ b/dahlia.css
@@ -150,6 +150,14 @@ a:hover {
   position: relative;
 }
 
+@media screen and (min-device-width: 1800px)
+  and (max-device-width: 3200px) {
+    #welcome img {
+      width: auto;
+      height: auto;
+    }
+}
+
 #gnome {
   display: flex;
   flex-direction: column;
