--- a/dahlia.css
+++ b/dahlia.css
@@ -150,8 +150,8 @@ a:hover {
   position: relative;
 }
 
-@media screen and (min-device-width: 1800px)
-  and (max-device-width: 3200px) {
+@media only screen and (min-width: 1800px)
+  and (max-width: 3200px) {
     #welcome img {
       width: 30px;
       height: 40px;
