--- a/dahlia.css
+++ b/dahlia.css
@@ -165,6 +165,7 @@ a:hover {
   (-webkit-min-device-pixel-ratio: 2) and
   (orientation: portrait) {
     .quote p {
+      display: none;
       font-size: 2.33rem;
     }
     
