--- a/dahlia.css
+++ b/dahlia.css
@@ -164,6 +164,10 @@ a:hover {
   (max-device-width: 667px) and
   (-webkit-min-device-pixel-ratio: 2) and
   (orientation: portrait) {
+    .quote {
+      display: none;
+    }
+    
     .quote p {
       display: none;
       font-size: 2.33rem;
