--- a/dahlia.css
+++ b/dahlia.css
@@ -165,15 +165,15 @@ a:hover {
   (-webkit-min-device-pixel-ratio: 2) and
   (orientation: portrait) {
     .quote {
-      display: none;
+      
     }
     
     .quote p {
-      display: none;
-      font-size: 2.33rem;
+      font-size: 5em;
     }
     
     #welcome {
+      display: none;
       border-radius: 1%;
       width: 95%;
       height: 95%;
