--- a/dahlia.css
+++ b/dahlia.css
@@ -46,10 +46,12 @@ a:hover {
   display: none;
 }
 
+/* Making Browser Smaller on Laptop/Desktop */
 @media only screen and (max-width: 650px) {
   .menu {
     display: none;
   }
+  
   .smallerMenu {
     display: flex;
     flex-direction: column;
@@ -91,6 +93,59 @@ a:hover {
     display: flex;
   }
 }
+
+/* Mobile Menu */
+@media only screen and
+  (min-device-width: 375px) and
+  (max-device-width: 667px) and
+  (-webkit-min-device-pixel-ratio: 2) and
+  (orientation: portrait) {
+   .menu {
+     display: none;
+    }
+    
+   .smallerMenu {
+      display: flex;
+      flex-direction: column;
+      justify-content: center; /*puts nav in the middle*/
+      height: 8.5em;
+      border-bottom: 3px dotted rgba(98, 146, 175, 0.3);
+      width: 100%;
+      background: url("Brown.JPG") no-repeat left top;
+      position: static;
+     }
+
+    .smallerMenu nav {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+     }
+
+    .smallerMenu nav ul {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #nightDahliaSym {
+      padding-top: 0.2em;
+    }
+
+    .smallerMenu nav ul a {
+      padding: 0.075em;
+    }
+
+    #topperTop {
+      display: none;
+    }
+
+    #hiddenTop {
+      display: flex;
+    }
+}
+    
 
 /* Quote */
 
@@ -186,7 +241,7 @@ a:hover {
       height: 100%;
     }
     
-    #gnome span p{
+    #gnome span p {
       font-size: 1rem;    /*RECENT CHANGE*/
       line-height: 2.5rem;  /*RECENT CHANGE*/
     }
