--- a/dahlia.css
+++ b/dahlia.css
@@ -94,7 +94,7 @@ a:hover {
   }
 }
 
-/* Mobile Menu */
+/* Mobile Menu --
 @media only screen and
   (min-device-width: 375px) and
   (max-device-width: 667px) and
@@ -105,12 +105,12 @@ a:hover {
     }
 }
 
-/* ipad mini menu */
+/* ipad mini menu --
 @media only screen and
   (min-device-width: 768px) and
   (max-device-width: 1024px) and
   (-webkit-min-device-pixel-ratio: 1) {
-}
+} */
     
 
 /* Quote */
@@ -513,16 +513,6 @@ footer div {
   height: 250px;
   border-radius: 100%;
   border: 2px solid Ivory;
-}
-
-@media only screen and
-  (min-device-width: 375px) and
-  (max-device-width: 667px) and
-  (-webkit-min-device-pixel-ratio: 2) and
-  (orientation: portrait) {
-    #possum {
-      transform: rotate(-90deg);
-    }
 }
  
 
