--- a/dahlia.css
+++ b/dahlia.css
@@ -94,7 +94,7 @@ a:hover {
   }
 }
 
-/* Mobile Menu --
+/* Mobile Menu */
 @media only screen and
   (min-device-width: 375px) and
   (max-device-width: 667px) and
@@ -102,15 +102,24 @@ a:hover {
   (orientation: portrait) {
    ul {
      flex-direction: column;
+     align-items: center;
+     justify-content: center;
+    }
+    
+    a:active {
+      color: #EBCEFC;
     }
 }
 
-/* ipad mini menu --
+/* ipad mini menu */
 @media only screen and
   (min-device-width: 768px) and
   (max-device-width: 1024px) and
   (-webkit-min-device-pixel-ratio: 1) {
-} */
+    a:active {
+      color: #EBCEFC;
+    }
+}
     
 
 /* Quote */
