--- a/dahlia.css
+++ b/dahlia.css
@@ -100,14 +100,33 @@ a:hover {
   (max-device-width: 667px) and
   (-webkit-min-device-pixel-ratio: 2) and
   (orientation: portrait) {
-   ul {
-     flex-direction: column;
-     align-items: center;
-     justify-content: center;
+    
+    .smallerMenu {
+      display: flex;
+      flex-direction: column;
+      justify-content: center; /*puts nav in the middle*/
+      height: 8.5em;
+      border-bottom: 3px dotted rgba(98, 146, 175, 0.3);
+      width: 100%;
+      background: url("Brown.JPG") no-repeat left top;
+      position: static;
     }
     
-    a:active {
-      color: #EBCEFC;
+    nav {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+    }
+    
+    ul {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    
+    a[tabindex]:focus {
+      color: #8DD1FC;
     }
 }
 
@@ -116,8 +135,8 @@ a:hover {
   (min-device-width: 768px) and
   (max-device-width: 1024px) and
   (-webkit-min-device-pixel-ratio: 1) {
-    a:active {
-      color: #EBCEFC;
+    a[tabindex]:focus {
+      color: #8DD1FC;
     }
 }
     
