--- a/dahlia.css
+++ b/dahlia.css
@@ -95,7 +95,7 @@ a:hover {
 }
 
 /* Mobile Menu */
-@media only screen and
+/*@media only screen and
   (min-device-width: 375px) and
   (max-device-width: 667px) and
   (-webkit-min-device-pixel-ratio: 2) and
@@ -108,7 +108,7 @@ a:hover {
     .smallerMenu {
       display: flex;
       flex-direction: column;
-      justify-content: center; /*puts nav in the middle*/
+      justify-content: center; /*puts nav in the middle
       height: 8.5em;
       border-bottom: 3px dotted rgba(98, 146, 175, 0.3);
       width: 100%;
@@ -132,12 +132,12 @@ a:hover {
     
     /*.smallerMenu nav ul a {
       font-size: 1.5rem;    /*RECENT CHANGE --
-    } */
+    } 
     
     a[tabindex]:focus {
       color: #8DD1FC;
     }
-}
+} */
 
 /* ipad mini menu */
 @media only screen and
@@ -147,6 +147,7 @@ a:hover {
     a[tabindex]:focus {
       color: #8DD1FC;
     }
+}
     
     /*.Menu nav ul a {
       font-size: 3rem;   /*RECENT CHANGE --
