--- a/dahlia.css
+++ b/dahlia.css
@@ -234,6 +234,11 @@ a:hover {
       line-height: 2.16rem;
     }
     
+    #howdy {
+      font-size: 3.5rem;    /* RECENT CHANGE */
+      line-height: 2rem;    /* RECENT CHANGE */
+    }
+    
     #welcome {
       border: none;   /* yellow line ... change? */
       width: 95%;
