--- a/dahlia.css
+++ b/dahlia.css
@@ -235,8 +235,8 @@ a:hover {
     }
     
     #howdy {
-      font-size: 3.5rem;    /* RECENT CHANGE */
-      line-height: 2rem;    /* RECENT CHANGE */
+      font-size: 6.5rem;    /* RECENT CHANGE */
+      line-height: 2rem;
     }
     
     #welcome {
