--- a/dahlia.css
+++ b/dahlia.css
@@ -109,7 +109,7 @@ a:hover {
       display: flex;
       flex-direction: column;
       justify-content: center; /*puts nav in the middle*/
-      height: 8.5em;    /*CHANGED from 8.5em to 10em */
+      height: 10em;    /*CHANGED from 8.5em to 10em */
       border-bottom: 3px dotted rgba(98, 146, 175, 0.3);
       width: 100%;
       background: url("Brown.JPG") no-repeat left top;
@@ -118,20 +118,20 @@ a:hover {
     
     .smallerMenu nav {
       display: flex;
-      flex-direction: column;   /*CHANGED from comment */
-      /*flex-wrap: wrap;       CHANGED to comment */
-      align-items: space-evenly;   /*CHANGED from center to space-evenly */
-      justify-content: center;    /*CHANGED from space-evenly to center */
+      flex-direction: column;   /*CHANGED PrEv from comment */
+      /*flex-wrap: wrap;       CHANGED PrEv to comment */
+      align-items: space-evenly;   /*CHANGED PrEv from center to space-evenly */
+      justify-content: center;    /*CHANGED PrEv from space-evenly to center */
     }
     
     .smallerMenu nav:nth-child(1) {
-      font-size: 2.5rem;   /*CHANGED from 1.75rem to 2.5rem */
+      font-size: 3rem;   /*CHANGED from 2.5rem to 3rem */
     }
     
     .smallerMenu nav ul {
       display: flex;
       /*flex-direction: column;*/
-      align-items: center;
+      align-items: space-evenly;   /*CHANGED from center to space-evenly */
       justify-content: center;
     }
     
@@ -240,9 +240,9 @@ a:hover {
     }
     
     #howdy {
-      font-size: 2.5rem;    /* CHANGED from 2.5rem to 3.5rem*/
+      font-size: 3.5rem;    /* CHANGED from 2.5rem to 3.5rem*/
       line-height: 2rem;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1.5rem; /*CHANGED from 1.5rem to 2.5rem */
     }
     
     #welcome {
@@ -259,7 +259,7 @@ a:hover {
     
     #gnome span p {
       font-size: 2.5rem;
-      line-height: 2.5rem;  /*CHANGED from 2rem to 2.5rem*/
+      line-height: 2.5rem;
     }
     
     /*section {
