--- a/dahlia.css
+++ b/dahlia.css
@@ -109,7 +109,7 @@ a:hover {
       display: flex;
       flex-direction: column;
       justify-content: center; /*puts nav in the middle*/
-      height: 10em;    /*CHANGED from 8.5em to 10em */
+      height: 12em;    /*CHANGED from 10em to 12em */
       border-bottom: 3px dotted rgba(98, 146, 175, 0.3);
       width: 100%;
       background: url("Brown.JPG") no-repeat left top;
@@ -121,17 +121,17 @@ a:hover {
       flex-direction: column;   /*CHANGED PrEv from comment */
       /*flex-wrap: wrap;       CHANGED PrEv to comment */
       align-items: space-evenly;   /*CHANGED PrEv from center to space-evenly */
-      justify-content: center;    /*CHANGED PrEv from space-evenly to center */
+      justify-content: space-evenly;    /*CHANGED from center to space-evenly */
     }
     
     .smallerMenu nav:nth-child(1) {
-      font-size: 3rem;   /*CHANGED from 2.5rem to 3rem */
+      font-size: 3rem;   /*CHANGED PrEv from 2.5rem to 3rem */
     }
     
     .smallerMenu nav ul {
       display: flex;
       /*flex-direction: column;*/
-      align-items: space-evenly;   /*CHANGED from center to space-evenly */
+      align-items: space-evenly;   /*CHANGED PrEv from center to space-evenly */
       justify-content: center;
     }
     
@@ -240,9 +240,9 @@ a:hover {
     }
     
     #howdy {
-      font-size: 3.5rem;    /* CHANGED from 2.5rem to 3.5rem*/
+      font-size: 3.5rem;    /* CHANGED PrEv from 2.5rem to 3.5rem*/
       line-height: 2rem;
-      margin-bottom: 1.5rem; /*CHANGED from 1.5rem to 2.5rem */
+      margin-bottom: 1.5rem; /*CHANGED PrEv from 1.5rem to 2.5rem */
     }
     
     #welcome {
@@ -295,7 +295,7 @@ a:hover {
     #howdy {
       font-size: 2.5rem;
       line-height: 2rem;    
-      margin-bottom: 1rem;  /* CHANGED */
+      margin-bottom: 1rem;  /* CHANGED PrEv */
     }
     
     #welcome {
