--- a/dahlia.css
+++ b/dahlia.css
@@ -120,7 +120,7 @@ a:hover {
       display: flex;
       flex-direction: column;   /*CHANGED PrEv from comment */
       /*flex-wrap: wrap;       CHANGED PrEv to comment */
-      align-items: space-evenly;   /*CHANGED PrEv from center to space-evenly */
+      align-items: space-around;   /*CHANGED from space-evenly space-around */
       justify-content: space-evenly;    /*CHANGED from center to space-evenly */
     }
     
@@ -132,8 +132,8 @@ a:hover {
       display: flex;
       /*flex-direction: column;*/
       width: 100%;    /*CHANGED*/
-      align-items: space-between;   /*CHANGED from space-evenly to space-between */
-      justify-content: center;
+      align-items: space-between;   /*CHANGED PrEv from space-evenly to space-between */
+      justify-content: space-between;     /*CHANGED from center to space-between */
     }
     
     /*.smallerMenu nav ul a {
