--- a/dahlia.css
+++ b/dahlia.css
@@ -133,7 +133,7 @@ a:hover {
       /*flex-direction: column;   /*Changed from uncomment to comment*/
       width: 100%;    /*CHANGED*/
       align-items: space-between;   /*CHANGED PrEv from space-evenly to space-between */
-      justify-content: space-between;     /*CHANGED PrEv from center to space-between */
+      justify-content: space-around;     /*CHANGED from space-between to space-around */
     }
     
     /*.smallerMenu nav ul a {
